--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,26 @@
-version: '3.8' 
+version: '3.8'
 
 services:
   redis:
     container_name: redis-cache
     image: redis
     environment:
-     -  REDIS_USER=redis
-     -  REDIS_PASSWORD=redis
-     -  REDIS_DB=movies
+     - REDIS_PASSWORD=redispassword 
     ports:
-      - "6379:6379"  
-
+      - "6379:6379"
+    command: ["redis-server", "--requirepass", "$REDIS_PASSWORD"] 
 
   postgres:
     container_name: pg-db-movies
     image: postgres
     environment:
-     -  POSTGRES_USER=postgres
-     -  POSTGRES_PASSWORD=docker
-     -  POSTGRES_DB=movies
+     - POSTGRES_USER=postgres-docker
+     - POSTGRES_PASSWORD=docker
+     - POSTGRES_DB=movies
     ports:
-      - 5432:5432   
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-
-
- 
+volumes:
+  postgres_data:
