--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.8'
+version: '3.9'
 
 services:
   redis:
     container_name: redis-cache
     image: redis
     environment:
-     - REDIS_PASSWORD=redispassword 
+     - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - "6379:6379"
     command: ["redis-server", "--requirepass", "$REDIS_PASSWORD"] 
@@ -14,7 +14,7 @@ services:
     container_name: pg-db-movies
     image: postgres
     environment:
-     - POSTGRES_USER=postgres-docker
+     - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=docker
      - POSTGRES_DB=movies
     ports:
