--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:ts": "typeorm-ts-node-esm",
+    "clear:db:test": "npm run typeorm:ts schema:drop -- -d ./typeorm/data-source.ts",
+    "migrate:create": "npm run typeorm:ts migration:create -- ./typeorm/migrations/Migrate",
+    "migrate:up": "npm run typeorm:ts migration:run -- -d ./typeorm/data-source.ts",
+    "migrate:down": "npm run typeorm:ts migration:revert -- -d ./typeorm/data-source.ts",
+    "preprod": "npm run format && npm run lint && npm test && npm run test:e2e",
+    "prod": "npm run build"
   },
   "husky": {
     "hooks": {
