chore: Update email configuration in .env-example file

--- a/.env-example
+++ b/.env-example
@@ -9,3 +9,8 @@ DB_DATABASE=movies
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redispassword
+
+MAIL_SERVER=
+MAIL_USER=
+MAIL_PORT=587
+MAIL_PASSWORD=
