--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -52,7 +53,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
+    "pug": "^3.0.2",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -66,6 +69,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
