--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "pug": "^3.0.2",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
