chore: Update .env-example with email server and OMDB API key

--- a/.env-example
+++ b/.env-example
@@ -10,7 +10,9 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redispassword
 
-MAIL_SERVER=
-MAIL_USER=
+MAIL_SERVER=smtp.mailersend.net
+MAIL_USER=MS_DG00ZU@trial-vywj2lp7dkkl7oqz.mlsender.net
 MAIL_PORT=587
-MAIL_PASSWORD=
+MAIL_PASSWORD=j8LirVTYWTXAvqoz
+
+OMDB_API_KEY=3be2b2af
